assets/css/style.css
/* Add google fonts here */
@import url('https://fonts.googleapis.com/css2?family=Roboto');
/*
.page {
    max-width: 1080px;
}
*/

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-weight: 300;
}

h1, h2 {
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    color: #956851;
    font-weight: 100;
}

#logo {
    text-decoration: none;
    font-size: 200%;
    float: left;
    margin-left: 5%;
}

#menu,
#logo {
    line-height: 70px;
}

#menu li {
    float: right;
    list-style-type: none;
    margin-right: 30px;
    color:#36312c;
}

#menu li:hover {
    background-color: #956851;
    color: #939d99;
}

#menu a {
    text-decoration: none;
    font-family: Roboto, sans-serif;
    font-size: 110%;
    padding: 0.25rem;
    color: inherit;
}

#hero-outer {
    position: relative;
    width: 100%;
    height: 300px;
    overflow: hidden;
}

#hero-image {
    background: url(../images/hero-image3.jpg) no-repeat center center;
    background-size: 100%;
    width: 100%;
    height: 300px;
}

#intro-text {
    font-size: 100%;
    font-family: roboto, sans-serif;
    letter-spacing: 4px;
    padding: 3%;
    max-height: 150px;
    max-width: 300px;
    background-color: rgba(54, 49, 44, .9);
    border-radius: 5px;
    position: absolute;
    bottom: 20%;
    left: 33%;
}

#intro-text h2 {
    text-align: center;
    font-size: 120%;
    margin-bottom: 10px;
}

#intro-text h3 {
    font-family: roboto, sans-serif;
}

#video-container {
    display: grid;
    width: fit-content;
    grid-template-columns: auto auto auto;
    justify-content: center;
    margin: auto;
    border: 3px solid #36312c;
    border-radius: 3px;
}

#intro-video {
    width: 33%;

}

